# external-buffered-stream

./: .gitignore  Cargo.toml  README.md
examples/: queue.rs  simple.rs  slow_source.rs
src/: buffer.rs  error.rs  lib.rs  runtime.rs  serde.rs
src/buffer/: queue.rs  sled.rs
src/serde/: bincode.rs
