[package]
name = "external-buffered-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", optional = true }
futures = "0.3.31"
log = "0.4.27"
sled = { version = "0.34", optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
rand = "0.9.2"
tokio-stream = "0.1.17"

[features]
default = ["bincode", "sled"]
full = [
  "bincode",
  "sled",
  "queue",
]

bincode = ["dep:bincode"]

sled = ["dep:sled"]
queue = []

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["default"]

[[example]]
name = "queue"
path = "examples/queue.rs"
required-features = ["queue"]

