[package]
name = "external-buffered-stream"
version = "0.1.6"
edition = "2024"
authors = ["Tony Tang <tangchang21@gmail.com>"]
license = "MIT"
description = "A stream that stores pending items in a external buffer"
keywords = ["stream", "buffer", "sled", "queue"]
categories = ["development-tools"]
repository = "https://github.com/tctony/external-buffered-stream"

[dependencies]
async-trait = "0.1.88"
bincode = { version = "2.0.1", optional = true }
futures = "0.3.31"
log = "0.4.27"
sled = { version = "0.34", optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
rand = "0.9.2"
tokio-stream = "0.1.17"

[features]
default = ["bincode", "sled"]
full = [
  "bincode",
  "sled",
  "queue",
  "rt-tokio"
]

bincode = ["dep:bincode"]

sled = ["dep:sled"]
queue = []

rt-tokio = ["tokio/rt"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["default"]

[[example]]
name = "slow_source"
path = "examples/slow_source.rs"
required-features = ["default"]

[[example]]
name = "queue"
path = "examples/queue.rs"
required-features = ["queue"]

